<resources>
    <string name="app_name">HeadlineNews</string>
    <string name="nav_switch_night_mode">切换主题</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">分享</string>
    <string name="title_news">新闻</string>
    <string name="title_pic">图片</string>
    <string name="title_video">视频</string>
    <string name="title_media">头条号</string>
    <string name="menu">菜单</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="net_error">网络不给力</string>
    <string name="news">新闻</string>
    <string name="add_channel">添加频道</string>
    <string name="my_channel">我的频道</string>
    <string name="my_channel_des">长按编辑,拖拽排序</string>
    <string name="ok">确认</string>
    <string name="hide_channel">影藏频道</string>
    <string name="channel_edit">编辑</string>
    <string name="make_confirm">请确认。</string>
    <string name="loading">正在加载...</string>
</resources>
