<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/channel_header_height"
        android:layout_marginLeft="@dimen/channel_margin"
        android:layout_marginRight="@dimen/channel_margin"
        android:layout_marginTop="@dimen/channel_item_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_channel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/my_channel"
                android:textSize="@dimen/news_item_big_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/my_channel_title"
                android:layout_alignBottom="@+id/my_channel_title"
                android:layout_marginLeft="@dimen/news_item_border_margin"
                android:layout_toEndOf="@+id/my_channel_title"
                android:layout_toRightOf="@+id/my_channel_title"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/my_channel_des"
                android:textSize="@dimen/news_item_little_title" />

            <TextView
                android:id="@+id/edit_and_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/my_channel_title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/news_item_border_margin"
                android:gravity="center"
                android:text="@string/channel_edit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/news_item_big_title" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/black" />
    </LinearLayout>
</layout>